Bug 362931 - layer styles are lost when converting a layer to another type
Summary: layer styles are lost when converting a layer to another type
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: 2.9
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-11 09:35 UTC by michael grosberg
Modified: 2016-05-25 14:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michael grosberg 2016-05-11 09:35:17 UTC
Layer styles are lost when the user either:
a. duplicates a layer by using "copy layer" then "paste layer" in the layers docker
b. converts a vector layer to a paint layer

Reproducible: Always

Steps to Reproduce:
1. create new layer
2. apply layer style
3. copy layer
4. paste layer

Actual Results:  
layer loses its layer style

Expected Results:  
layer should retain its layer style
Comment 1 wolthera 2016-05-11 12:56:29 UTC
I can only confirm the vectors losing their layer style on conversion to paintlayer, but copy layer and paste layer works fine here.
Comment 2 Halla Rempt 2016-05-14 10:48:24 UTC
Same here.
Comment 3 Halla Rempt 2016-05-14 10:49:51 UTC
2.9 has the same bug, so no regression.
Comment 4 Dmitry Kazakov 2016-05-25 14:49:11 UTC
Git commit d6e1726d5015eaafc58d126be911988b943576d9 by Dmitry Kazakov.
Committed on 25/05/2016 at 13:44.
Pushed by dkazakov into branch 'master'.

Flatten Shape Layers when doing "Convert to a Paint Layer"

M  +8    -0    libs/ui/kis_layer_manager.cc

http://commits.kde.org/krita/d6e1726d5015eaafc58d126be911988b943576d9
Comment 5 Dmitry Kazakov 2016-05-25 14:53:35 UTC
Fixed now