Fix clipboard-based copy-paste of the shape layers

BUG:362931